tests/baselines/reference/thisInSuperCall2.symbols
//// [tests/cases/compiler/thisInSuperCall2.ts] ////

=== thisInSuperCall2.ts ===
class Base { 
>Base : Symbol(Base, Decl(thisInSuperCall2.ts, 0, 0))

    constructor(a: any) {}
>a : Symbol(a, Decl(thisInSuperCall2.ts, 1, 16))
}

class Foo extends Base {
>Foo : Symbol(Foo, Decl(thisInSuperCall2.ts, 2, 1))
>Base : Symbol(Base, Decl(thisInSuperCall2.ts, 0, 0))

    public x: number;
>x : Symbol(Foo.x, Decl(thisInSuperCall2.ts, 4, 24))

    constructor() {
        super(this); // error: "super" has to be called before "this" accessing
>super : Symbol(Base, Decl(thisInSuperCall2.ts, 0, 0))
>this : Symbol(Foo, Decl(thisInSuperCall2.ts, 2, 1))
    }
}


class Foo2 extends Base {
>Foo2 : Symbol(Foo2, Decl(thisInSuperCall2.ts, 9, 1))
>Base : Symbol(Base, Decl(thisInSuperCall2.ts, 0, 0))

    public x: number = 0;
>x : Symbol(Foo2.x, Decl(thisInSuperCall2.ts, 12, 25))

    constructor() {
        super(this); // error
>super : Symbol(Base, Decl(thisInSuperCall2.ts, 0, 0))
>this : Symbol(Foo2, Decl(thisInSuperCall2.ts, 9, 1))
    }
}

